@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
-* 
+* [mms] Fix PHP error notification thrown if backends &apos;params&apos; parameter was empty (Bug #11615).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1154,7 +1154,7 @@
    <date>2012-10-30</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
-* 
+* [mms] Fix PHP error notification thrown if backends &apos;params&apos; parameter was empty (Bug #11615).
    </notes>
   </release>
  </changelog>
